finally fixed spacing by name

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,6 +53,7 @@ header p {
   text-align:center;
   color: #222;
   padding:5px 0 10px 0;
+  margin:0;
 }
 
 header p a.name {
